# fastapi_training

./: .env.example  .gitignore  pyproject.toml  t.txt
train_1/: README.md  main.py
train_2/: README.md  items_view.py  main.py
train_2/users/: crud.py  views.py
train_3/: README.md  db.sqlite3  main.py
train_3/api/v1/: __init__.py
train_3/api/v1/products/: dependecies.py  schemas.py
train_3/api/v1/users/: schemas.py  utils.py
train_3/models/: __init__.py  product.py
train_4/: README.md  config.py  db.sqlite3  main.py  train_request_with_relationship.py
train_4/alembic/versions/: 2023_10_12_2040-f37756159b19_init.py  2023_10_12_2233-854dc2cfe4e1_create_user_table.py  2023_10_12_2302-9cac87df4ea6_create_post_table.py  2023_10_12_2353-bb20db84e030_create_profile_table.py
train_4/api/v1/items/: views.py
train_4/api/v1/users/: views.py
train_4/models/: __init__.py  mixins.py  profile.py
train_5/: README.md  alembic.ini  db.sqlite3  train_request_with_relationship.py
train_5/alembic/: env.py
train_5/alembic/versions/: 2023_10_24_0210-00e0a106e764_add_order_table.py  2023_10_24_0307-687006201af0_add_order_product_association.py  2023_10_26_1535-b687140a4a75_add_count_and_unit_price_column_to_.py
train_5/api/: __init__.py
train_5/api/v1/products/: utils.py  views.py
train_5/models/: __init__.py  base.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  user.py
